--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- font awesome import -->
+    <script src="https://kit.fontawesome.com/6d1c94196d.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
